--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div id="app">
     <div id="loading-bg">
         <div class="loading-logo">
-            <img width="78" height="78" src="/logo.svg" alt="Logo"/>
+            <img width="78" height="78" src="https://trastatic.hydralabs.ru/logo.svg" alt="Logo"/>
         </div>
         <div class="loading">
             <div class="effect-1 effects"></div>
